[package]
name = "tetro-98-ggez"
version = "0.2.0"
authors = ["Filippo Orru <filippoorru@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
laminar = "0.3.2"
crossbeam-channel = "0.3.9"
rand = "0.7.3"